Openapi paging and regeneration again